# qtl-ctp-api

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: publish-to-pypi.yml
docs/: index.md
libs/ctp/include/: ThostFtdcMdApi.h  ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h
scripts/generator/: generate.py  readme.md  requirements.txt
scripts/generator/templates/: bind_consts.cpp.tpl  bind_md_api.cpp.tpl  bind_td_api.cpp.tpl  md_api.cpp.tpl  md_api.h.tpl  td_api.cpp.tpl  td_api.h.tpl
src/: bind_consts.cpp  bind_consts.h  bind_md_api.cpp  bind_md_api.h  bind_td_api.cpp  bind_td_api.h  dispatch_queue.cpp  dispatch_queue.h  iconv.hpp  main.cpp  md_api.cpp  md_api.h  td_api.cpp  td_api.h  utils.h
src/qtl_ctp_api/: __init__.py
tests/: .gitignore  test_basic.py  test_md.py  test_td.py
