[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "qtl-ctp-api"
version = "6.7.2"
description = "QTL CTP API"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/Quantalon/qtl-ctp-api"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1
